Fix overflow of ticket messgae

--- a/client/src/styles/App.css
+++ b/client/src/styles/App.css
@@ -722,6 +722,7 @@
   transform: translate(0%, -50%);
   color: #111827;
   white-space: nowrap;
+  overflow: hidden;
 }
 
 .ticketMessage {
@@ -729,9 +730,11 @@
   position: absolute;
   top: 72.5%;
   left: 7.5%;
+  width: 58.5%;
   transform: translate(0%, -50%);
   color: #6D7280;
   white-space: nowrap;
+  overflow: hidden;
 }
 
 .ticketDate {
